# iterare-llm

./: .gitignore  .gitmodules  CLAUDE.md  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml
.iterare/: Dockerfile  config.toml
docker/: entrypoint.sh  init-firewall.sh
docs/: dockerhub-overview.md
src/iterare_llm/: __init__.py  config.py  docker.py  exceptions.py  git.py  logging.py  main.py  paths.py  prompt.py  run.py  workspace.py
src/iterare_llm/commands/: cleanup.py  common.py  credentials.py  execute.py  init.py  install.py  interactive.py  list.py  log.py  merge.py
tests/: conftest.py  test_config.py  test_docker.py  test_git.py  test_logging.py  test_main.py  test_paths.py  test_prompt.py  test_run.py  test_workspace.py
tests/commands/: test_cleanup.py  test_common.py  test_credentials.py  test_execute.py  test_init.py  test_install.py  test_interactive.py  test_list.py  test_log.py  test_merge.py
tests/test_files/: invalid_config.toml  invalid_values_config.toml  log_with_blanks.jsonl  prompt_bad_frontmatter.md  prompt_empty_frontmatter.md  prompt_no_frontmatter.md  prompt_with_frontmatter.md  runs_multiple.json  sample_log.jsonl  valid_config.toml  valid_runs.json
