[project]
name = "iterare-llm"
dynamic = ["version"]
description = "Automated Claude Code execution in isolated environments"
readme = "README.md"
requires-python = ">=3.13"
license = "MIT"
authors = [
    { name = "Andrew Walker", email = "andrew.walker@sohonet.com" },
]
keywords = ["claude", "automation", "docker", "agentic", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Build Tools",
]
dependencies = [
    "typer>=0.19.2",
    "pyyaml>=6.0.1",
    "docker>=7.0.0",
    "platformdirs>=4.0.0",
]

[project.scripts]
iterare = "iterare_llm.main:main"

[project.urls]
Homepage = "https://github.com/sohonetlabs/iterare-llm"
Repository = "https://github.com/sohonetlabs/iterare-llm"
Issues = "https://github.com/sohonetlabs/iterare-llm/issues"

[dependency-groups]
dev = [
    "ruff>=0.8.4",
]
test = [
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "coverage>=7.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = [
    "src/",
    "/VERSION",
    "/LICENSE",
    "/README.md",
    "/pyproject.toml",
]

[tool.hatch.version]
path = "VERSION"
pattern = "(?P<version>.+)"
